--- a/SAP - 2025/JAVASCRIPT/index.html
+++ b/SAP - 2025/JAVASCRIPT/index.html
@@ -17,9 +17,9 @@
     <h3>Reasons for Choosing US</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nostrum quis, odio veniam itaque ullam debitis qui magnam consequatur ab. Vero nostrum quis, odio veniam itaque ullam debitis qui magnam consequatur ab.</p>
         <br>
-        <a href="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\sobre.html">HomeHost</a></p>
-        <a href="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\produtos.html">HomeHost</a></p>
-        <a href="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\contatos.html">HomeHost</a></p>
+        <a href="C:\Users\andre\OneDrive\Área de Trabalho\Web\SAP\SAP - 2025\JAVASCRIPT\sobre.html">SOBRE</a></p>
+        <a href="C:\Users\andre\OneDrive\Área de Trabalho\Web\SAP\SAP - 2025\JAVASCRIPT\produtos.html">PRODUTOS</a></p>
+        <a href="C:\Users\andre\OneDrive\Área de Trabalho\Web\SAP\SAP - 2025\JAVASCRIPT\contatos.html">CONTATOS</a></p>
         </div>
     </header>
 </body>
