--- a/SAP - 2025/JAVASCRIPT/produtos.html
+++ b/SAP - 2025/JAVASCRIPT/produtos.html
@@ -5,38 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
 </head>
 <body>
     <h1 style="text-align: center;">Produtos</h1>
-    <div class="priProd">
-        <button type="submit" aria-label="Gerar relatório pdf">
-            <img src="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\images.png">
+    <div class="priProd" style="margin-left: 50px;">
+        <button type="submit" aria-label="Gerar relatório pdf" onclick="adiciona('produto1')">
+            <img src="C:\Users\andre\OneDrive\Área de Trabalho\Web\SAP\SAP - 2025\JAVASCRIPT\images.png">
+            <p>teste</p>
+        </button>
+        <button type="submit" aria-label="Gerar relatório pdf" onclick="adiciona('produto2')">
+            <img src="C:\Users\andre\OneDrive\Área de Trabalho\Web\SAP\SAP - 2025\JAVASCRIPT\images.png">
             <p>Prod1</p>
         </button>
-        <button type="submit" aria-label="Gerar relatório pdf">
-            <img src="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\images.png">
+        <button type="submit" aria-label="Gerar relatório pdf" onclick="adiciona('produto3')">
+            <img src="C:\Users\andre\OneDrive\Área de Trabalho\Web\SAP\SAP - 2025\JAVASCRIPT\images.png">
             <p>Prod1</p>
         </button>
-        <button type="submit" aria-label="Gerar relatório pdf">
-            <img src="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\images.png">
+        <button type="submit" aria-label="Gerar relatório pdf" onclick="adiciona('produto4')">
+            <img src="C:\Users\andre\OneDrive\Área de Trabalho\Web\SAP\SAP - 2025\JAVASCRIPT\images.png">
             <p>Prod1</p>
         </button>
-        <button type="submit" aria-label="Gerar relatório pdf">
-            <img src="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\images.png">
-            <p>Prod1</p>
-        </button>
-        <button type="submit" aria-label="Gerar relatório pdf">
-            <img src="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\images.png">
-            <p>Prod1</p>
-        </button>
-        <button type="submit" aria-label="Gerar relatório pdf">
-            <img src="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\images.png">
-            <p>Prod1</p>
-        </button>
-        <button type="submit" aria-label="Gerar relatório pdf">
-            <img src="C:\Users\55519\Desktop\SAP - 2025\JAVASCRIPT\HtmlToPDF\images.png">
+        <button type="submit" aria-label="Gerar relatório pdf" onclick="adiciona('produto5')">
+            <img src="C:\Users\andre\OneDrive\Área de Trabalho\Web\SAP\SAP - 2025\JAVASCRIPT\images.png">
             <p>Prod1</p>
         </button>
     </div>
+    <button onclick="calculaValor()">Calcular valor final</button>
 </body>
 </html>
